# svc-error-rs

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
src/: error.rs  lib.rs
src/extension/: diesel.rs  mod.rs  r2d2.rs  sentry.rs  sqlx.rs  svc_agent.rs  svc_authn.rs  svc_authz.rs
