[package]
name = "svc-error"
version = "0.1.3"
authors = ["Andrei Nesterov <ae.nesterov@gmail.com>"]
description = "An implementation of RFC7807: Problem Details for HTTP APIs."
readme = "README.md"
keywords = ["problem-details", "rfc7807", "error"]
categories = ["web-programming"]
repository = "https://github.com/netology-group/svc-error-rs"
license = "MIT"
edition = "2018"

[dependencies]
http = "0.1"
serde = { version = "1.0" }
serde_derive = { version = "1.0" }
diesel = { version = ">=1.4", optional = true }
r2d2 = { version = ">=0.8", optional = true }
svc-agent = { version = ">=0.5", optional = true }
svc-authn = { version = ">=0.4", optional = true }
svc-authz = { version = ">=0.4", optional = true }
sentry = { version = ">=0.16", optional = true }

[features]
default = []
