[package]
name = "svc-error"
version = "0.3.0"
authors = ["Andrei Nesterov <ae.nesterov@gmail.com>"]
description = "An implementation of RFC7807: Problem Details for HTTP APIs."
readme = "README.md"
keywords = ["problem-details", "rfc7807", "error"]
categories = ["web-programming"]
repository = "https://github.com/netology-group/svc-error-rs"
license = "MIT"
edition = "2018"

[dependencies]
anyhow = "1"
crossbeam-channel = "0.5"
diesel = { version = "1.4.8", optional = true }
http = "0.2"
once_cell = { version = "1", optional = true }
r2d2 = { version = ">=0.8", optional = true }
sentry = { version = "0.23", optional = true, default-features = false, features = ["anyhow", "backtrace"] }
sentry-anyhow = { version = "0.23", optional = true, features = ["backtrace"] }
serde = { version = "1.0" }
serde_derive = { version = "1.0" }
sqlx = { version = "0.5", optional = true, features = [ "runtime-tokio-native-tls" ] }
svc-agent = { version = ">=0.5", optional = true }
svc-authn = { version = ">=0.4", optional = true }
svc-authz = { version = ">=0.9", optional = true }

[features]
default = []
sentry-extension = ["sentry", "sentry-anyhow", "once_cell"]
